--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RemindMe Landing Page</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  
   <link href="./assets/tailwind-output.css" rel="stylesheet">
   <style>
     :root {
@@ -20,6 +20,7 @@
     }
   </style>
 <head>
+  <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="font-sans bg-white text-gray-900">
     <header class="fixed top-0 left-0 w-full flex justify-between items-center p-4 bg-white shadow z-10">
